--- a/tooltips/templates/tooltips/tooltips.html
+++ b/tooltips/templates/tooltips/tooltips.html
@@ -6,7 +6,7 @@
             trigger: 'hover',
             title: '{{tooltip.title}}',
             placement: 'auto top',
-            content: '{{tooltip.body}}'
+            content: '{{tooltip.body|safe}}'
         })
     });
 {% endfor %}
